// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Onboarding AskNotifications component should pass additional props to Slide component 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Can we keep you informed?
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll let you know when important things are happening and keep you in the loop
            </Text>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "flexDirection": "row-reverse",
          "justifyContent": "space-between",
          "left": 0,
          "marginVertical": 8,
          "paddingHorizontal": 16,
          "paddingVertical": 0,
          "position": "absolute",
          "right": 0,
        }
      }
      vertical={false}
    >
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        forceInset={
          Object {
            "bottom": "always",
            "top": "never",
          }
        }
      >
        <Text
          onPress={[MockFunction]}
          style={
            Object {
              "color": "#A5A5A5",
              "marginLeft": -16,
              "paddingHorizontal": 16,
              "paddingVertical": 15,
            }
          }
        >
          Later
        </Text>
      </RCTSafeAreaView>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding AskNotifications component should render 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Can we keep you informed?
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll let you know when important things are happening and keep you in the loop
            </Text>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding AskNotifications component should render a BackgroundComponent 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <View
            animate={null}
            customAnimate={null}
            onReady={false}
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#A5A5A5",
                "resizeMode": "cover",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "cache": "force-cache",
                    "uri": "https://picsum.photos/640/640/?random",
                    "url": "https://picsum.photos/640/640/?random",
                  },
                ]
              }
              style={
                Object {
                  "backgroundColor": "#A5A5A5",
                  "opacity": 0,
                  "resizeMode": "cover",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Can we keep you informed?
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll let you know when important things are happening and keep you in the loop
            </Text>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding AskNotifications component should render a button with custom text 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Can we keep you informed?
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll let you know when important things are happening and keep you in the loop
            </Text>
          </View>
          <View
            horizontal={false}
            style={
              Object {
                "paddingHorizontal": 0,
                "paddingVertical": 16,
              }
            }
          >
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                bordered={false}
                disabled={false}
                pill={false}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#00676D",
                    "borderColor": "#00676D",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "elevation": 2,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingHorizontal": 16,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "InterUI-Bold",
                      "fontSize": 16,
                      "lineHeight": 23.04,
                    }
                  }
                >
                  Custom button text
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding AskNotifications component should render a custom description 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Can we keep you informed?
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              Custom description text
            </Text>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding AskNotifications component should render a custom title 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Custom title text
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll let you know when important things are happening and keep you in the loop
            </Text>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding AskNotifications component should render the button disabled 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Can we keep you informed?
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll let you know when important things are happening and keep you in the loop
            </Text>
          </View>
          <View
            horizontal={false}
            style={
              Object {
                "paddingHorizontal": 0,
                "paddingVertical": 16,
              }
            }
          >
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                bordered={false}
                disabled={true}
                pill={false}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#00676D",
                    "borderColor": "#00676D",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "elevation": 2,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": 0.5,
                    "overflow": "hidden",
                    "paddingHorizontal": 16,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "InterUI-Bold",
                      "fontSize": 16,
                      "lineHeight": 23.04,
                    }
                  }
                >
                  Yes, enable notifications
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding AskNotifications component should render with a button 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Can we keep you informed?
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll let you know when important things are happening and keep you in the loop
            </Text>
          </View>
          <View
            horizontal={false}
            style={
              Object {
                "paddingHorizontal": 0,
                "paddingVertical": 16,
              }
            }
          >
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                bordered={false}
                disabled={false}
                pill={false}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#00676D",
                    "borderColor": "#00676D",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "elevation": 2,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingHorizontal": 16,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "InterUI-Bold",
                      "fontSize": 16,
                      "lineHeight": 23.04,
                    }
                  }
                >
                  Yes, enable notifications
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;
